--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,5 @@ KV_REST_API_URL=XXXXXXXX
 KV_REST_API_TOKEN=XXXXXXXX
 KV_REST_API_READ_ONLY_TOKEN=XXXXXXXX
 
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=XXXXXXXX
+
